removed module-infos and rewored pom to fix eclipse slowness